--- a/src/app/modules/public/components/singup/singup.component.scss
+++ b/src/app/modules/public/components/singup/singup.component.scss
@@ -13,8 +13,15 @@
   justify-content: center;
   align-items: center;
   width: 25rem;
-  height: 60%;
+  height: auto;
   background-color: white;
+}
+
+
+
+
+h1{
+  margin-top: 15px;
 }
 
 .logo{
@@ -28,5 +35,4 @@ span{
 .mat-form-field, button{
   margin: 10px;
   width:20rem;
-
 }
