--- a/src/app/modules/private/components/menu-bar/menu-bar.component.html
+++ b/src/app/modules/private/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,7 @@
-<p>menu-bar works!</p>
+
+<mat-sidenav-container class="example-container" *ngIf="shouldRun">
+    <mat-sidenav mode="side" opened>Sidenav content</mat-sidenav>
+    <mat-sidenav-content>Main content</mat-sidenav-content>
+  </mat-sidenav-container>
+
+ 
