--- a/src/app/modules/public/components/recover/recover.component.html
+++ b/src/app/modules/public/components/recover/recover.component.html
@@ -1,1 +1,14 @@
-<p>recover works!</p>
+<div class="main">
+    <img src="../../../../../assets/images/small_logo.svg" class="logo">
+    <div class="recoverContainer">
+        <h1>Recuperar senha</h1>
+        <span>insira seu email que enviaremos uma nova senha</span>
+        <mat-form-field appearance="fill" >
+            <mat-label>Digite Seu email</mat-label>
+            <input matInput  >
+          </mat-form-field>
+
+        <button mat-raised-button color="primary" routerLink="">Cadastrar </button>
+
+    </div>
+</div>
