--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,3 +40,6 @@ body { margin: 0; font-family: Inter, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Inter, "Helvetica Neue", sans-serif; }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
