--- a/src/app/modules/private/components/side-menu/side-menu.component.html
+++ b/src/app/modules/private/components/side-menu/side-menu.component.html
@@ -12,20 +12,20 @@
       <mat-list>
         <h3 matLine> Cadastros </h3>
         <mat-list-item>
-          <h3 class="menubtn" >Coleções</h3>
+          <p class="menubtn" >Coleções</p>
         </mat-list-item>
         <mat-list-item>
-          <h3 class="menubtn" >Modelos </h3>
+          <p class="menubtn" >Modelos </p>
         </mat-list-item>
       </mat-list>
 
       <mat-list>
         <h3 matLine> Suporte </h3>
         <mat-list-item>
-          <h3 class="menubtn" >Obter Ajuda</h3>
+          <p class="menubtn" >Obter Ajuda</p>
         </mat-list-item>
         <mat-list-item>
-          <h3  class="menubtn" >Enviar Comentario</h3>
+          <p  class="menubtn" >Enviar Comentario</p>
         </mat-list-item>
       </mat-list>
 
