--- a/src/app/modules/private/layout/dashboard/dashboard.component.html
+++ b/src/app/modules/private/layout/dashboard/dashboard.component.html
@@ -1,1 +1,14 @@
-<app-side-menu></app-side-menu>
+<div class="mainCont">
+    <div class="menuCont">
+        <app-side-menu></app-side-menu>
+    </div>
+    <div class="contentCont">
+        <div class="welcome">
+            <h1>Bem vindo, Usuário</h1>
+            <h4>Acompanhe a visão geral de suas coleções</h4>
+        </div>
+        <app-cards></app-cards>
+        <h1>Maiores Orçamentos</h1>
+        <app-dash-list></app-dash-list>
+    </div>
+</div>
