--- a/src/app/modules/private/components/product-form/product-form.component.scss
+++ b/src/app/modules/private/components/product-form/product-form.component.scss
@@ -37,11 +37,13 @@ mat-radio-group {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin: 15px 110px;
-
 }
 
 .radio{
 display: flex;
+flex-direction: row;
 justify-content: flex-start;
+justify-content: space-around;
 }
+
+
