--- a/src/app/modules/private/components/collection-form/collection-form.component.html
+++ b/src/app/modules/private/components/collection-form/collection-form.component.html
@@ -33,5 +33,5 @@
 </div>
 <footer>
   <button mat-flat-button >Cancelar</button>
-  <button mat-flat-button color="primary" class="button1">Salvar</button>
+  <button mat-flat-button color="primary" class="button1" (click)="createCollection()">Salvar</button>
 </footer>
