Add Product Main

--- a/src/app/modules/private/components/dash-list/dash-list.component.html
+++ b/src/app/modules/private/components/dash-list/dash-list.component.html
@@ -1,29 +1,23 @@
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
-</table>
+<header>
+  <h1>Maiores Orçamentos</h1>
+
+</header>
+
+<div class="content">
+  <table class="table table-hover">
+    <thead>
+      <tr >
+        <th scope="col" *ngFor="let row of Rows">{{row}}</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of AllCollections">
+        <th scope="row">{{data.id}}</th>
+        <td>{{data.name}}</td>
+        <td>R$ {{data.orcamento}}</td>
+        <td>{{data.responsavel}}</td>
+      </tr>
+
+    </tbody>
+  </table>
+</div>
