--- a/src/app/modules/private/components/product-main/product-main.component.scss
+++ b/src/app/modules/private/components/product-main/product-main.component.scss
@@ -6,3 +6,28 @@ header{
 .content{
   margin: 50px 0;
 }
+
+.content{
+  margin: 50px 0;
+}
+
+table{
+  width: 80%;
+  margin: auto;
+}
+
+td{
+  padding: 20px;
+  color: #9395A3;
+
+}
+
+th{
+  padding: 20px;
+  color:#2B2C33
+}
+
+
+tr:hover{
+  cursor: pointer;
+}
