--- a/src/app/modules/private/components/collection-main/collection-main.component.scss
+++ b/src/app/modules/private/components/collection-main/collection-main.component.scss
@@ -8,13 +8,14 @@ header{
 }
 
 table{
-  width: 100%;
+  width: 80%;
+  margin: auto;
 }
 
 td{
   padding: 20px;
   color: #9395A3;
-  
+
 }
 
 th{
