--- a/src/app/modules/private/components/product-main/product-main.component.html
+++ b/src/app/modules/private/components/product-main/product-main.component.html
@@ -6,12 +6,12 @@
 <div class="content">
   <table class="table table-hover">
     <thead>
-      <tr >
+      <tr class = "text-center">
         <th scope="col" *ngFor="let row of Rows">{{row}}</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let data of AllProds">
+      <tr *ngFor="let data of AllProds" class = "text-center">
         <th scope="row">{{data.id}}</th>
         <td>{{data.name}}</td>
         <td>{{data.colecao}}</td>
