Add Calcu média

--- a/src/app/modules/private/components/cards/cards.component.html
+++ b/src/app/modules/private/components/cards/cards.component.html
@@ -1,15 +1,15 @@
 <div class="container">
     <div class="card">
         <span>Coleções</span>
-        <h1>10</h1>
+        <h1>{{collectionLenght}}</h1>
     </div>
     <div class="card">
-        <span>Coleções</span>
-        <h1>10</h1>
+        <span>Produtos</span>
+        <h1>{{AllProds}}</h1>
     </div>
     <div class="card">
-        <span>Coleções</span>
-        <h1>10</h1>
+        <span>Orçamento Médio por Coleção</span>
+        <h1>R$ {{allValues}}</h1>
     </div>
 </div>
 
