--- a/src/app/modules/private/components/collection-form/collection-form.component.html
+++ b/src/app/modules/private/components/collection-form/collection-form.component.html
@@ -13,7 +13,7 @@
   </mat-form-field>
   <mat-form-field appearance="fill">
     <mat-label>Qual é o orçamento desta coleção?</mat-label>
-    <input matInput formControlName="orcamento">
+    <input type="number" matInput formControlName="orcamento">
   </mat-form-field>
   <mat-form-field appearance="fill">
     <mat-label>Responsável pela Coleção</mat-label>
