--- a/src/app/modules/private/components/dash-list/dash-list.component.scss
+++ b/src/app/modules/private/components/dash-list/dash-list.component.scss
@@ -1,3 +1,6 @@
+*{
+  font-family: 'Inter', sans-serif;
+}
 table{
   width: 80%;
   margin: auto;
@@ -17,4 +20,5 @@ th{
 
 tr:hover{
   cursor: pointer;
+
 }
