--- a/src/app/modules/public/components/login/login.component.html
+++ b/src/app/modules/public/components/login/login.component.html
@@ -18,7 +18,7 @@
             <mat-error *ngIf="errorMsg">Usuário incorreto ou não cadastrado!</mat-error>
         </mat-form-field>
 
-        <button mat-raised-button color="primary" (click)="UserLogin()">Entrar </button>
+        <button mat-flat-button color="primary" (click)="UserLogin()">Entrar </button>
     </div>
         <p>Não possui cadastro? <a routerLink="criar">Cadastrar</a></p>
         <p>Esqueceu a senha? <a routerLink="recuperar">Redefinir senha</a></p>
