--- a/src/app/modules/public/components/recover/recover.component.html
+++ b/src/app/modules/public/components/recover/recover.component.html
@@ -8,7 +8,7 @@
             <input matInput  >
           </mat-form-field>
 
-        <button mat-raised-button color="primary" routerLink="">Cadastrar </button>
+        <button mat-flat-button color="primary" routerLink="">Recuperar </button>
 
     </div>
 </div>
