--- a/src/app/modules/public/components/singup/singup.component.html
+++ b/src/app/modules/public/components/singup/singup.component.html
@@ -24,7 +24,7 @@
             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
         </mat-form-field>
-      <button mat-raised-button color="primary" (click)="setNewUser()">Cadastrar </button>
+      <button mat-flat-button color="primary" (click)="setNewUser()">Cadastrar </button>
 
   </div>
 </div>
