--- a/src/app/modules/private/components/product-main/product-main.component.scss
+++ b/src/app/modules/private/components/product-main/product-main.component.scss
@@ -1,3 +1,6 @@
+*{
+  font-family: 'Inter', sans-serif;
+}
 header{
   display: flex;
   justify-content: space-between;
@@ -30,4 +33,5 @@ th{
 
 tr:hover{
   cursor: pointer;
+
 }
