--- a/src/app/modules/public/components/singup/singup.component.scss
+++ b/src/app/modules/public/components/singup/singup.component.scss
@@ -1,5 +1,5 @@
 .main{
-  background-color: #e6eaff;
+  background-color: #f0f1fa;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -12,13 +12,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 25rem;
-  height: auto;
+  width: 30rem;
+  height: 35rem;
   background-color: white;
+  border-radius: 8px;
 }
-
-
-
 
 h1{
   margin-top: 15px;
@@ -29,10 +27,15 @@ h1{
 }
 
 span{
-  margin-bottom: 40px;
+  margin-bottom: 25px;
   color:#B4B6C1 ;
 }
-.mat-form-field, button{
-  margin: 10px;
-  width:20rem;
+.mat-form-field{
+  margin: 8px;
+  width:22rem;
+}
+
+.mat-flat-button{
+  width:22rem;
+  background-color: #0073CF
 }
