--- a/src/app/modules/private/components/collection-main/collection-main.component.html
+++ b/src/app/modules/private/components/collection-main/collection-main.component.html
@@ -11,7 +11,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let data of AllCollections"class = "text-center">
+      <tr *ngFor="let data of AllCollections$ | async"class = "text-center">
         <th scope="row">{{data.id}}</th>
         <td>{{data.name}}</td>
         <td>{{data.estacao}}</td>
