--- a/src/app/modules/private/components/product-main/product-main.component.html
+++ b/src/app/modules/private/components/product-main/product-main.component.html
@@ -11,7 +11,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let data of AllProds$ | async" class = "text-center">
+      <tr *ngFor="let data of AllProds$ | async" class = "text-center" (click) = "goToEdit(data.id)">
         <th scope="row">{{data.id}}</th>
         <td>{{data.name}}</td>
         <td>{{data.colecao}}</td>
