--- a/src/app/modules/private/components/product-form/product-form.component.html
+++ b/src/app/modules/private/components/product-form/product-form.component.html
@@ -52,6 +52,8 @@
   <img src="../../../../../assets/images/image 1.png">
 </div>
 <footer>
+  <button mat-flat-button color="warn" (click)="removeProd()"> Excluir</button>
   <button mat-flat-button >Cancelar</button>
   <button mat-flat-button color="primary" class="button1" (click)="createProd()">Salvar</button>
+
 </footer>
