--- a/src/app/modules/private/components/product-form/product-form.component.scss
+++ b/src/app/modules/private/components/product-form/product-form.component.scss
@@ -49,4 +49,12 @@ justify-content: flex-start;
 justify-content: space-around;
 }
 
+.delete{
+  align-self: flex-start;
+}
+ footer{
+   display: flex;
+   justify-content: space-between;
+ }
+
 
