--- a/src/app/modules/private/components/product-form/product-form.component.html
+++ b/src/app/modules/private/components/product-form/product-form.component.html
@@ -28,7 +28,7 @@
   <mat-form-field appearance="fill">
     <mat-label>Selecionar a Coleção</mat-label>
     <mat-select formControlName="colecao">
-      <mat-option *ngFor="let item of AllCollections$ | async" [value]="item.name">{{item.name}}</mat-option>
+      <mat-option *ngFor="let item of AllProds$ | async" [value]="item.name">{{item.name}}</mat-option>
     </mat-select>
   </mat-form-field>
 
