--- a/src/app/modules/private/components/product-form/product-form.component.scss
+++ b/src/app/modules/private/components/product-form/product-form.component.scss
@@ -54,7 +54,11 @@ justify-content: space-around;
 }
  footer{
    display: flex;
-   justify-content: space-between;
+   
+ }
+
+ .defaultBtn{
+   align-self: flex-end;
  }
 
 
