--- a/src/app/modules/private/components/product-form/product-form.component.html
+++ b/src/app/modules/private/components/product-form/product-form.component.html
@@ -28,7 +28,7 @@
   <mat-form-field appearance="fill">
     <mat-label>Selecionar a Coleção</mat-label>
     <mat-select formControlName="colecao">
-      <mat-option *ngFor="let item of AllProds$ | async" [value]="item.name">{{item.name}}</mat-option>
+      <mat-option *ngFor="let item of AllCollections$ | async" [value]="item.name">{{item.name}}</mat-option>
     </mat-select>
   </mat-form-field>
 
@@ -54,7 +54,7 @@
 <footer>
   <button mat-flat-button class="" color="warn" class='delete' (click)="removeProd()" *ngIf="id != null">
     Excluir</button>
-  <div>
+  <div class="defaultBtn">
     <button mat-flat-button>Cancelar</button>
     <button mat-flat-button color="primary" class="button1" (click)="createProd()">Salvar</button>
   </div>
