--- a/src/app/modules/private/components/collection-form/collection-form.component.html
+++ b/src/app/modules/private/components/collection-form/collection-form.component.html
@@ -32,6 +32,6 @@
   <img src="../../../../../assets/images/image 1.png">
 </div>
 <footer>
-  <button mat-flat-button >Cancelar</button>
+  <button mat-flat-button (click)=cancel()>Cancelar</button>
   <button mat-flat-button color="primary" class="button1" (click)="createCollection()">Salvar</button>
 </footer>
