--- a/src/app/modules/private/components/collection-main/collection-main.component.html
+++ b/src/app/modules/private/components/collection-main/collection-main.component.html
@@ -14,7 +14,7 @@
       <tr *ngFor="let data of AllCollections$ | async "class = "text-center" (click) = "goToEdit(data.id)">
         <th scope="row">{{data.id}}</th>
         <td>{{data.name}}</td>
-        <td>{{data.estacao}}</td>
+        <td>{{data.estacao}}  {{data.anoLancamento}}</td>
         <td>{{data.responsavel}}</td>
       </tr>
 
